--- a/package.json
+++ b/package.json
@@ -20,14 +20,11 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "spectrum-colorpicker": "^1.8.0",
-    "three": "^0.90.0"
-  },
-  "devDependencies": {
+    "three": "^0.90.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
-    "concurrently": "^3.5.0",
     "css-loader": "^0.28.4",
     "dotenv": "^4.0.0",
     "exports-loader": "^0.7.0",
@@ -36,11 +33,14 @@
     "imports-loader": "^0.8.0",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
-    "nodemon": "^1.11.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "uuid": "^3.1.0",
     "webpack": "^3.3.0",
     "webpack-merge": "^4.1.2"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.11.0"
   }
 }
